
2021-10-04  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_integer, output_long_integer): use
	  integer exponentiation in libcob instead of floating point
	  from libmath/math.h, fixing #702

2021-10-01  Simon Sobisch <simonsobisch@gnu.org>

	* ppparse.y, pplex.l, scanner.l: implementation of COBOL-WORDS directive
	* reserved.c, cobc.h, tree.h: added missing COBOL 202x reserved words
	  and intrinsic functions to the internal lists
	* parser.y: _parsing_ of INSPECT BACKWARD, SEND mcs

2021-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, field.c: partial merge of 2020-01-12 related to bug #513

2021-09-29  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_file_initialization): don't generate attribute
	  setting which is done in cob_file_malloc / cob_file_external_addr
	* codegen.c (output_module_init_function): set module->gc_version

2021-09-28  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_print_info): skip initial "." when printing COB_EXE_EXT
	* cobc.c (process_command_line): postpone version output for --verbose
	* cobc.c (set_listing_date): use formatted instead of ANSI timestamp,
	  allow format to be specified at cobc compile-time via with define
	  LISTING_TIMESTAMP_FORMAT

2021-09-27  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_generic_register): handle CONSTANT
	* error.c (ambiguous_error): handling for internal definitions / registers
	* typeck.c (cb_build_generic_register), tree.h: optionally return
	  cob_field for register
	* cobc.c, cobc.h, reserved.c: code for ancient OSVS registers - disabled

2021-09-26  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (create_implicit_picture): PICTURE is mandatory
	  for report description entries with SOURCE or SUM clause

2021-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_const_length): ensure we actually have a valid
	  tree to build the length of, fixing #769 SIGSEGV with invalid code
