@@ -1,4 +1,4 @@
-## Copyright (C) 2003-2012, 2015-2019 Free Software Foundation, Inc.
+## Copyright (C) 2003-2012, 2015-2019,2021 Free Software Foundation, Inc.
 ## Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart
 ##
 ## This file is part of GnuCOBOL.
@@ -210,7 +210,7 @@ AT_DATA([prog.cob], [
        PROGRAM-ID. prog.
        DATA  DIVISION.
        WORKING-STORAGE SECTION.
-       01  TAB.
+       01  . *> the "filler" explicit checks bug #776
            05  TAB-ENTRY1
                   OCCURS 5 TIMES
                   ASCENDING KEY IS X1
